package api_OperatoreTelefonico;

import lombok.*;
import java.util.List;

public class PhoneAdministration {
    private List<Sim> listOfSim;
    private java.util.List<String> assignedNumbers;
    private java.util.List<Integer> assignedPuks;
}
