package api_TrasportiLogistic;

/**
 * devono essere immutabili
 */
public class Leg {
    private Location origine;
    private Location destinazione;

    public void CalcolaDistanza() {
    }

    public void KmPerTipologia() {
    }
}
