package api_TrasportiLogistic;

/**
 * rappresenta un luogo collegabile con una Leg
 */
public class Location {
}
