package api_TrasportiLogistic;

public class Prenotazione {
}
