package api_TrasportiLogistic;

public class Trip {
    private Path percorso;

    public void CalcolaDurata() {
    }

    public void CalcolaCosto() {
    }
}
