@startuml

title __LAB_PROG_OGGETTI's Class Diagram__\n

  namespace  {
    class Prenotazione {
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.CallData {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.FileCloser {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.InvalidCallDataParameter {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.NotEnoughCreditException {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.Person {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.PhoneAdministration {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      enum Promotions {
      }
    }
  }
  

  namespace  {
    namespace pi_OperatoreTelefonico {
      class api_OperatoreTelefonico.Sim {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Truck {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Location {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Path {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.TipiStrada {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Leg {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Trip {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Main {
      }
    }
  }
  

  api_TrasportiLogistic.Leg o-- api_TrasportiLogistic.Location : destinazione
  api_TrasportiLogistic.Leg o-- api_TrasportiLogistic.Location : origine
  api_TrasportiLogistic.Trip o-- api_TrasportiLogistic.Path : percorso


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
